--- a/views/bubbleGraph.ejs
+++ b/views/bubbleGraph.ejs
@@ -30,21 +30,34 @@
     <script type="text/javascript">
     $(function () {
         $('#container').highcharts({
-
     	    chart: {
     	        type: 'bubble',
     	        zoomType: 'xy'
     	    },
-
+    	    
     	    title: {
     	    	text: 'Manufacturers with Model Type, Year & Fuel Cost'
-    	    },
-            
+    	    },   
+    	    xAxis: {
+    	    	title: {
+        	    	text: 'Fuel Cost'
+        	    }
+    	     },
+    	     yAxis: {
+     	    	title: {
+         	    	text: 'Year'
+         	    }
+     	     },
+     	    zAxis: {
+     	    	title: {
+         	    	text: 'Total Products'
+         	    }
+     	     },
             plotOptions: {
                 bubble: {
                     dataLabels: {
-                        enabled: true,
-                        style: { textShadow: 'none'},
+                        enabled: false,
+                        style: { textShadow: 'none', color:'black'},
                         formatter: function() {
                             return this.point.name;
                         }
@@ -52,8 +65,7 @@
                     minSize: '10%',
                     maxSize: '30%'
                 }
-            },
-            
+            },            
             series: [
                 { 
                     name: 'Mercedes',
@@ -61,11 +73,11 @@
                     data: [
                        { name: '<%= merc[0]._id.VClass%>', x: <%= merc[0]._id.fuelCost08%>, y: <%= merc[0]._id.year%>, z: <%= merc[0].total_products%>}, 
                        { name: '<%= merc[1]._id.VClass%>', x: <%= merc[1]._id.fuelCost08%>, y: <%= merc[1]._id.year%>, z: <%= merc[1].total_products%>}, 
-                     //  { name: '<%= merc[2]._id.VClass%>', x: <%= merc[2]._id.fuelCost08%>, y: <%= merc[2]._id.year%>, z: <%= merc[2].total_products%>},
+                       { name: '<%= merc[2]._id.VClass%>', x: <%= merc[2]._id.fuelCost08%>, y: <%= merc[2]._id.year%>, z: <%= merc[2].total_products%>},
                        { name: '<%= merc[3]._id.VClass%>', x: <%= merc[3]._id.fuelCost08%>, y: <%= merc[3]._id.year%>, z: <%= merc[3].total_products%>},
-                     //  { name: '<%= merc[4]._id.VClass%>', x: <%= merc[4]._id.fuelCost08%>, y: <%= merc[4]._id.year%>, z: <%= merc[4].total_products%>},
+                       { name: '<%= merc[4]._id.VClass%>', x: <%= merc[4]._id.fuelCost08%>, y: <%= merc[4]._id.year%>, z: <%= merc[4].total_products%>},
                        { name: '<%= merc[5]._id.VClass%>', x: <%= merc[5]._id.fuelCost08%>, y: <%= merc[5]._id.year%>, z: <%= merc[5].total_products%>},
-                      // { name: '<%= merc[6]._id.VClass%>', x: <%= merc[6]._id.fuelCost08%>, y: <%= merc[6]._id.year%>, z: <%= merc[6].total_products%>}
+                       { name: '<%= merc[6]._id.VClass%>', x: <%= merc[6]._id.fuelCost08%>, y: <%= merc[6]._id.year%>, z: <%= merc[6].total_products%>}
                     ]
                 },
                 { 
@@ -74,11 +86,11 @@
                     data: [
                        { name: '<%= audi[0]._id.VClass%>', x: <%= audi[0]._id.fuelCost08%>, y: <%= audi[0]._id.year%>, z: <%= audi[0].total_products%>}, 
                        { name: '<%= audi[1]._id.VClass%>', x: <%= audi[1]._id.fuelCost08%>, y: <%= audi[1]._id.year%>, z: <%= audi[1].total_products%>}, 
-                      // { name: '<%= audi[2]._id.VClass%>', x: <%= audi[2]._id.fuelCost08%>, y: <%= audi[2]._id.year%>, z: <%= audi[2].total_products%>},
+                       { name: '<%= audi[2]._id.VClass%>', x: <%= audi[2]._id.fuelCost08%>, y: <%= audi[2]._id.year%>, z: <%= audi[2].total_products%>},
                        { name: '<%= audi[3]._id.VClass%>', x: <%= audi[3]._id.fuelCost08%>, y: <%= audi[3]._id.year%>, z: <%= audi[3].total_products%>},
-                      // { name: '<%= audi[4]._id.VClass%>', x: <%= audi[4]._id.fuelCost08%>, y: <%= audi[4]._id.year%>, z: <%= audi[4].total_products%>},
+                       { name: '<%= audi[4]._id.VClass%>', x: <%= audi[4]._id.fuelCost08%>, y: <%= audi[4]._id.year%>, z: <%= audi[4].total_products%>},
                        { name: '<%= audi[5]._id.VClass%>', x: <%= audi[5]._id.fuelCost08%>, y: <%= audi[5]._id.year%>, z: <%= audi[5].total_products%>},
-                       //{ name: '<%= audi[6]._id.VClass%>', x: <%= audi[6]._id.fuelCost08%>, y: <%= audi[6]._id.year%>, z: <%= audi[6].total_products%>}
+                       { name: '<%= audi[6]._id.VClass%>', x: <%= audi[6]._id.fuelCost08%>, y: <%= audi[6]._id.year%>, z: <%= audi[6].total_products%>}
                     ]
                 },
                 { 
@@ -87,11 +99,11 @@
                     data: [
                        { name: '<%= bmw[0]._id.VClass%>', x: <%= bmw[0]._id.fuelCost08%>, y: <%= bmw[0]._id.year%>, z: <%= bmw[0].total_products%>}, 
                        { name: '<%= bmw[1]._id.VClass%>', x: <%= bmw[1]._id.fuelCost08%>, y: <%= bmw[1]._id.year%>, z: <%= bmw[1].total_products%>}, 
-                      // { name: '<%= bmw[2]._id.VClass%>', x: <%= bmw[2]._id.fuelCost08%>, y: <%= bmw[2]._id.year%>, z: <%= bmw[2].total_products%>},
+                       { name: '<%= bmw[2]._id.VClass%>', x: <%= bmw[2]._id.fuelCost08%>, y: <%= bmw[2]._id.year%>, z: <%= bmw[2].total_products%>},
                        { name: '<%= bmw[3]._id.VClass%>', x: <%= bmw[3]._id.fuelCost08%>, y: <%= bmw[3]._id.year%>, z: <%= bmw[3].total_products%>},
-                      // { name: '<%= bmw[4]._id.VClass%>', x: <%= bmw[4]._id.fuelCost08%>, y: <%= bmw[4]._id.year%>, z: <%= bmw[4].total_products%>},
+                       { name: '<%= bmw[4]._id.VClass%>', x: <%= bmw[4]._id.fuelCost08%>, y: <%= bmw[4]._id.year%>, z: <%= bmw[4].total_products%>},
                        { name: '<%= bmw[5]._id.VClass%>', x: <%= bmw[5]._id.fuelCost08%>, y: <%= bmw[5]._id.year%>, z: <%= bmw[5].total_products%>},
-                       //{ name: '<%= bmw[6]._id.VClass%>', x: <%= bmw[6]._id.fuelCost08%>, y: <%= bmw[6]._id.year%>, z: <%= bmw[6].total_products%>}
+                       { name: '<%= bmw[6]._id.VClass%>', x: <%= bmw[6]._id.fuelCost08%>, y: <%= bmw[6]._id.year%>, z: <%= bmw[6].total_products%>}
                     ]
                 }
             ]            	
