--- a/views/pieBmw.ejs
+++ b/views/pieBmw.ejs
@@ -47,7 +47,7 @@
                 plotShadow: false
             },
             title: {
-                text: 'Browser market shares at a specific website, 2014'
+                text: 'Market shares based on drive type'
             },
             tooltip: {
                 pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
