--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,19 +11,16 @@
                 <a style="font-size:2em;" class="navbar-brand" href="/">Elite Technologies</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="page-scroll" href="/#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#services">Services</a>
+                        <a class="page-scroll" href="/#services">Features</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#contacts">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#collapseExample" data-toggle="collapse" aria-expanded="false" aria-controls="collapseExample">Feedback</a>
+                        <a class="page-scroll" href="/#contacts">Team</a>
                     </li>
                 </ul>
             </div>
